@@ -2,4 +2,4 @@ module github.com/marad/frontmatter
 
 go 1.24.1
 
-require gopkg.in/yaml.v3 v3.0.1
+require github.com/goccy/go-yaml v1.18.0
